[package]
authors = ["Rodrigo Fernandes <rtfrodrigo@gmail.com>"]
description = "An async websocket client for Home Assistant"
documentation = "https://docs.rs/hass-ws"
edition = "2021"
keywords = ["hass", "homeassistant", "tokio"]
license = "MIT"
name = "hass-ws"
readme = "README.md"
repository = "https://github.com/rtfpessoa/hass-ws"
version = "0.3.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-std-runtime"]

async-std-runtime = ["async-std", "async-tls", "async-tungstenite/async-std-runtime", "async-tungstenite/async-tls"]
tokio-runtime = ["tokio", "tokio-native-tls", "async-tungstenite/tokio-runtime", "async-tungstenite/tokio-native-tls"]

[dependencies]
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.2"
uuid = {version = "0.8", features = ["serde", "v4"]}

async-tungstenite = {version = "0.16", optional = true}
tokio = {version = "1.16", optional = true, features = ["time", "macros", "rt", "rt-multi-thread"]}
tokio-native-tls = {version = "0.3", optional = true}

async-std = {version = "1.10", optional = true, features = ["attributes"]}
async-tls = {version = "0.11", optional = true}

[dev-dependencies]
env_logger = "0.9"
lazy_static = "1.4.0"

[[example]]
name = "ping"
path = "examples/ping.rs"

[[example]]
name = "subscribe_event"
path = "examples/subscribe_event.rs"

[[example]]
name = "fetch_items"
path = "examples/fetch_items.rs"
